Add all employee service endpoints